--- a/css/grid.css
+++ b/css/grid.css
@@ -1,27 +1,20 @@
-@-moz-viewport { width: device-width; scale: 1; }
-@-ms-viewport { width: device-width; scale: 1; }
-@-o-viewport { width: device-width; scale: 1; }
-@-webkit-viewport { width: device-width; scale: 1; }
-@viewport { width: device-width; scale: 1; }
-
-html {
-  box-sizing: border-box;
+.grid {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
--moz-text-size-adjust: 100%;
--ms-text-size-adjust: 100%;
--webkit-text-size-adjust: 100%;
-text-size-adjust: 100%;
-
-body {
-  margin: 0;
-}
-
-.img-flex {
-  display: block;
+.xs-1 {
   width: 100%;
+}
+
+.s-1 {
+  width: 100%;
+}
+
+.m-1-2 {
+  width: 50%;
+}
+
+.l-1-3 {
+  width: 33.333%;
 }
