--- a/css/grid.css
+++ b/css/grid.css
@@ -7,14 +7,26 @@
   width: 100%;
 }
 
-.s-1 {
-  width: 100%;
+@media only screen and (min-width: 25em) {
+
+  .s-1 {
+    width: 100%;
+  }
+
 }
 
-.m-1-2 {
-  width: 50%;
+@media only screen and (min-width: 38em) {
+
+  .m-1-2 {
+    width: 50%;
+  }
+
 }
 
-.l-1-3 {
-  width: 33.333%;
+@media only screen and (min-width: 60em) {
+
+  .l-1-3 {
+    width: 33.333%;
+  }
+
 }
